# turboquant

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_vs_faiss.ipynb  compare_faiss.py  compare_faiss_lite.py  multi_dataset_benchmark.ipynb  real_embeddings.py  real_world_embeddings.ipynb
notebooks/: kv_cache_compression_demo.ipynb  langchain_integration.ipynb  polarquant.ipynb  turboquant.ipynb  turboquant_small_dim_walkthrough.ipynb
tqtorch/: README.md  pyproject.toml
tqtorch/src/tqtorch/: __init__.py
tqtorch/src/tqtorch/core/: __init__.py  codebook.py  mse_quantizer.py  packed.py  prod_quantizer.py  qjl.py  rotation.py
tqtorch/src/tqtorch/search/: __init__.py  index.py  langchain.py
tqtorch/tests/: test_tqtorch.py
